<resources>
    <string name="app_name">Tour Guide App: Odessa</string>
    <string name="category_cafes">Кафе и Рестораны</string>
    <string name="category_hotel">Отели, Мотели, Хостелв</string>
    <string name="category_fam_attract">Известные Достропримечательности</string>
    <string name="category_museums">Музеи</string>
    <string name="category_theaters">Театры</string>
    <string name="category_catacombs">Катакомбы</string>
    <string name="one_hotel_name">Отель Vele Rosse</string>
    <string name="one_hotel_desc">Отель Vele Rosse находится в 5 минутах ходьбы от песчаного пляжа на берегу Черного моря. К услугам гостей фитнес-центр, сауна и бильярд.</string>
    <string name="one_hotel_addr">улица Гаршина, 3</string>
    <string name="one_hotel_work">Круглосуточно, без выходных</string>
    <string name="one_hotel_tel">+38(097) 500-00-50</string>
    <string name="one_hotel_site">http://vele-rosse.com.ua/</string>
    <string name="two_hotel_name">Хостел Многоборец</string>
    <string name="two_hotel_desc">Хостел "Многоборец" расположен в городе Одесса, в 4,2 км от стадиона "Спартак". Расстояние от хостела "Многоборец" до аэропорта Одессы составляет 3 км, до ж/д вокзала - 6,1 км.</string>
    <string name="two_hotel_addr">ул. Минская, 6</string>
    <string name="two_hotel_work">Регистрация заезда: с 12:30 часов. Регистрация отъезда: до 12:00 часов.</string>
    <string name="two_hotel_tel">067 510-15-04</string>
    <string name="two_hotel_site">https://www.booking.com/hotel/ua/hostel-mnogoborets-f-klub.ru.html</string>
    <string name="three_hotel_name">Отель Мирный Курорт</string>
    <string name="three_hotel_desc">16-ти этажное здание отеля Мирный расположено в одном из курортных районов Одессы - на 9й станции Большого Фонтана, недалеко от моря (900 метров до ближайшего пляжа).</string>
    <string name="three_hotel_addr">Фонтанская дорога 71А</string>
    <string name="three_hotel_work">Круглосуточно, без выходных</string>
    <string name="three_hotel_tel">+380 (48) 716-77-37</string>
    <string name="three_hotel_site">http://ru.mirniy.in.ua/</string>
    <string name="four_hotel_name">Хостел «Чемодан-2»</string>
    <string name="four_hotel_desc">Хостел «Чемодан-2» расположен в Одессе, в 700 метрах от театра оперы и балета.</string>
    <string name="four_hotel_addr">ул. Греческая, 50 кв 7</string>
    <string name="four_hotel_work">Круглосуточно, без выходных</string>
    <string name="four_hotel_tel">067 510-15-04</string>
    <string name="four_hotel_site">https://www.booking.com/hotel/ua/hostel-chemodan-2-odessa.ru.html</string>
    <string name="five_hotel_name">Отель "Курортный"</string>
    <string name="five_hotel_desc">Обратите свое внимание на отель Курортный, который расположен в одном из престижных зеленых районов города Одессы – Аркадия!</string>
    <string name="five_hotel_addr">пер. Курортный, 2</string>
    <string name="five_hotel_work">Круглосуточно, без выходных</string>
    <string name="five_hotel_tel">+38(048) 784-76-00</string>
    <string name="five_hotel_site">http://www.inkurort.com/</string>
    <string name="six_hotel_name">Centro Hostel Odessa</string>
    <string name="six_hotel_desc">"Centro Hostel" находится на расстоянии 2,8 км от ж/д вокзала, в 8,3 км от аэропорта. В 700 м от хостела расположен Одесский оперный театр, оживленная Дерибасовская - в 7 минутах ходьбы.</string>
    <string name="six_hotel_addr">ул. Гоголя, 9  </string>
    <string name="six_hotel_work">Регистрация заезда: с 13:00 часов. Регистрация отъезда: до 12:00 часов.</string>
    <string name="six_hotel_tel">+380685599619</string>
    <string name="six_hotel_site">http://inhostel.org/</string>
    <string name="one_cafe_name">Bernardazzi</string>
    <string name="one_cafe_desc">Добро пожаловать в ресторан "Бернардацци" - особый мир, в котором приятные сочетания вина и еды украшены живыми музыкальными этюдами. </string>
    <string name="one_cafe_addr">ул. Бунина, 15</string>
    <string name="one_cafe_work">Понедельник-Четверг с 12:00 до 00:00 Пятница-Суббота с 11:00 до 02:00 Воскресенье с 11:00 до 00:00</string>
    <string name="one_cafe_tel">+380 (67) 000 25 11</string>
    <string name="one_cafe_site">http://bernardazzi.com/</string>
    <string name="two_cafe_name">Tavernetta</string>
    <string name="two_cafe_desc">Провинциальный ресторан итальянской кухни, в котором готовят изысканные итальянские блюда и в буквальном смысле носят их на руках.</string>
    <string name="two_cafe_addr">ул. Екатерининская, 45</string>
    <string name="two_cafe_work">9:00 - 00:00</string>
    <string name="two_cafe_tel">096 23-44-621</string>
    <string name="two_cafe_site">http://www.tavernetta.ua/</string>
    <string name="three_cafe_name">Стейкхаус. Мясо и вино</string>
    <string name="three_cafe_desc">Ресторан «Стейкхаус. Мясо и вино», Одесса. Основан в 1998 году.</string>
    <string name="three_cafe_addr">ул. Дерибасовская, 20 (угол Гаванной)</string>
    <string name="three_cafe_work">Мы работаем с 11:00 до 2:00 часов</string>
    <string name="three_cafe_tel">(0482) 34 87 82</string>
    <string name="three_cafe_site">http://steak.od.ua/</string>
    <string name="four_cafe_name">Fratelli</string>
    <string name="four_cafe_desc">Fratelli – самое главное у нас в тарелке!</string>
    <string name="four_cafe_addr">ул. Греческая 17</string>
    <string name="four_cafe_work">С 12:00 до 23:45 СБ-ВС с 9:00 до 23:45</string>
    <string name="four_cafe_tel">0487384848</string>
    <string name="four_cafe_site">http://www.fratelli.ua/</string>
    <string name="five_cafe_name">Компот</string>
    <string name="five_cafe_desc">Сеть кафе, известная своим французским шармом и одесским гостеприимством.</string>
    <string name="five_cafe_addr">Пантелеймоновская, 70</string>
    <string name="five_cafe_work">с 7:00 до 23:00</string>
    <string name="five_cafe_tel">0482 345-145</string>
    <string name="five_cafe_site">http://www.kompot.ua/</string>
    <string name="one_fam_name">Одесский театр оперы и балета</string>
    <string name="one_fam_desc">Одесский национальный академический театр оперы и балета — первый театр в Одессе по времени постройки, значению и известности.</string>
    <string name="one_fam_addr">пер. Чайковского, 1</string>
    <string name="one_fam_work">с 11:00 до 19:30 (кроме Пн.)</string>
    <string name="one_fam_tel">+38 (048) 780-15-09</string>
    <string name="one_fam_site">http://www.opera.odessa.ua/</string>
    <string name="two_fam_name">Памятник де Ришельё</string>
    <string name="two_fam_desc">Памятник герцогу де Ришельё в Одессе — бронзовый монумент в полный рост, посвящённый Арману Эмманюэлю дю Плесси, герцогу де Ришельё, открыт в 1828 году. Первый памятник, установленный в Одессе.</string>
    <string name="two_fam_addr">Приморский бульвар, 7</string>
    <string name="two_fam_work">24 часа в сутки</string>
    <string name="two_fam_tel">-</string>
    <string name="two_fam_site">-</string>
    <string name="three_fam_name">Памятник апельсину</string>
    <string name="three_fam_desc">Па́мятник Апельси́ну, кото́рый спас Оде́ссу — установленный в Одессе бронзовый монумент, посвящённый историческому событию — доставке в феврале 1800 года 3 000 свежих греческих апельсинов из Одесского порта в Санкт-Петербург в подарок от одесситов императору Павлу I. Памятник открыт в 2004 году, первоначально находился на улице Ланжероновской. В 2007 году перенесен на бульвар Искусств (ныне бульвар Жванецкого).</string>
    <string name="three_fam_addr">бульвар Жванецкого</string>
    <string name="three_fam_work">24 часа в сутки</string>
    <string name="three_fam_tel">-</string>
    <string name="three_fam_site">-</string>
    <string name="four_fam_name">Потёмкинская лестница</string>
    <string name="four_fam_desc">Потёмкинская лестница — бульварная лестница, ведущая к морю в Одессе. Архитектурное сооружение в стиле классицизма является памятником архитектуры первой половины XIX века и одной из главных достопримечательностей города.</string>
    <string name="four_fam_addr"> бульвар Приморский</string>
    <string name="four_fam_work">24 часа в сутки</string>
    <string name="four_fam_tel">-</string>
    <string name="four_fam_site">-</string>
    <string name="five_fam_name">Памятник основателям Одессы</string>
    <string name="five_fam_desc">Па́мятник основателям Одессы — памятник Екатерине II и её сподвижникам — де Рибасу, де Волану, Потемкину и Зубову. Расположен в Одессе на Екатерининской площади. Воздвигнут в 1900 году по проекту одесского архитектора Юрия Мелетьевича Дмитренко. Скульптор Михаил Петрович Попов, при участии скульпторов Бориса Васильевича Эдуардса, Леопольда Менционе, инженер А. А. Сикорский. В 1920 году демонтирован. Восстановлен в 2007 году.</string>
    <string name="five_fam_addr">  пл. Екатерининская</string>
    <string name="five_fam_work">24 часа в сутки</string>
    <string name="five_fam_tel">-</string>
    <string name="five_fam_site">-</string>
    <string name="one_cat_name">Катакомбы Кантакузена</string>
    <string name="one_cat_desc">Полуторачасовая обзорная экскурсия по центру Одессы со спуском в городские катакомбы на улице Бунина.</string>
    <string name="one_cat_addr">улица Бунина</string>
    <string name="one_cat_work">-</string>
    <string name="one_cat_tel">+38(093)4390139</string>
    <string name="one_cat_site">catacombs.od.ua</string>
    <string name="two_cat_name">Музей партизанской славы</string>
    <string name="two_cat_desc">В Музее партизанской славы представлены предметы быта партизан, образцы оружия и штабного оборудования, архивные документы, фотографии и личные вещи партизан, образцы художественного творчества членов отряда Молодцова-Бадаева.</string>
    <string name="two_cat_addr">Одесская область, Беляевский район, с. Нерубайское</string>
    <string name="two_cat_work">Любое время, если предварительно позвонить и договориться.</string>
    <string name="two_cat_tel">067-292-30-55, 067-729-24-85</string>
    <string name="two_cat_site">catacombs.od.ua</string>
    <string name="three_cat_name">Музей "Тайны подземной Одессы"</string>
    <string name="three_cat_desc">Музей "Тайны подземной Одессы" обустроен в катакомбах Молдаванки, где в XIX и начале XX века добывали камень для строительства города.</string>
    <string name="three_cat_addr">Разумовская, 33</string>
    <string name="three_cat_work">10.00, 14.00 и 18.00</string>
    <string name="three_cat_tel">+380934390139</string>
    <string name="three_cat_site">catacombs.od.ua</string>
    <string name="one_mus_name">Одесский музей западного и восточного искусства</string>
    <string name="one_mus_desc">Одесский музей западного и восточного искусства — один из крупнейших художественных музеев Украины, коллекция которого обладает рядом произведений высокой художественной и культурной ценности.</string>
    <string name="one_mus_addr"> ул. Пушкинская, 9</string>
    <string name="one_mus_work">с 10.00 до 17.00 (касса до 16.30) зимой,с 10.30. до 18.00 (касса до 17.30) летом. Выходной день - Среда.</string>
    <string name="one_mus_tel">+38 (048)722-48-15</string>
    <string name="one_mus_site">http://www.oweamuseum.odessa.ua</string>
    <string name="two_mus_name">Одесский литературный музей</string>
    <string name="two_mus_desc">Литературная Одесса - это не только имена писателей, биографически или творчески связанные с городом, но и художественный образ, обогативший мировую культуру.</string>
    <string name="two_mus_addr">ул, Ланжероновская, 2</string>
    <string name="two_mus_work"> с 10:00 до 17:00, кроме понедельника.</string>
    <string name="two_mus_tel">8 (048) 722-33-70 </string>
    <string name="two_mus_site">http://museum-literature.odessa.ua/</string>
    <string name="three_mus_name">Одесский археологический музей</string>
</resources>